--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,13 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.3.9</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
