--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jackson.time-zone: Europe/Istanbul
 spring.data.web.pageable.one-indexed-parameters=true
+
+logging.level.org.springframework.security=DEBUG
